--- a/.env.example
+++ b/.env.example
@@ -12,5 +12,9 @@
 NEXTAUTH_URL=http://localhost:3000
 NEXTAUTH_SECRET=your-secret-key-here
 
-# Optional: OpenAI API Key for future AI features
-OPENAI_API_KEY=your-openai-api-key-here
+# Google Gemini AI API Key (Optional - for AI-enhanced matching)
+# Get your API key from: https://makersuite.google.com/app/apikey
+GEMINI_API_KEY=your-gemini-api-key-here
+
+# Admin seed key (Optional - for seeding data via API)
+ADMIN_SEED_KEY=your-admin-key-here
